--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -397,7 +397,7 @@
         </div>
         <div class="flex gap-3 overflow-auto max-[1440px]:gap-2">
           <div
-            class="bg-[#E8EBED] truck-card active radius_left min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#E8EBED] truck-card max-[1440px]:flex-1 active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:min-w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Тент” 10 тонн"
             data-img="../assets/images/tent.png"
             data-length="13.6 м"
@@ -417,7 +417,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full max-[1440px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:min-w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="13.2 м"
@@ -437,7 +437,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full max-[1440px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:min-w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -457,7 +457,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full max-[1440px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:min-w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -477,7 +477,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_right min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_right max-[1440px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:min-w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
