--- a/index.html
+++ b/index.html
@@ -275,144 +275,144 @@
     <div
       class="swiper mySwiper relative -mt-22.5 max-[1440px]:-mt-23 overflow-hidden -z-10 mx-auto"
     >
-      <div class="swiper-wrapper rounded-b-[56px]">
+      <div class="swiper-wrapper rounded-b-[56px] z-12">
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] min-[1024px]:max-h-250 max-[1024px]:hidden max-[768px]:block hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full rounded-b-[3.5rem] min-[1024px]:max-h-240 max-[1024px]:hidden max-[768px]:block hidden max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] hidden max-h-315 max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full min-[1024px]:max-h-250 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full min-[1024px]:max-h-240 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full min-[1024px]:max-h-250 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full min-[1024px]:max-h-240 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full min-[1024px]:max-h-250 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full min-[1024px]:max-h-240 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full min-[1024px]:max-h-250 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full min-[1024px]:max-h-240 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
+            class="w-full max-h-240 rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
             alt="main"
-            class="w-full min-[1024px]:max-h-250 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
+            class="w-full min-[1024px]:max-h-240 rounded-b-[3.5rem] max-[1024px]:hidden hidden max-[768px]:block max-[1440px]:block max-[768px]:rounded-b-3xl max-[768px]:h-153.5 object-cover"
           />
           <img
             src="./assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
       </div>
       <div class="swiper-pagination"></div>
 
       <div
-        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
+        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 inset-0 z-1 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div class="max-[1024px]:w-full">
           <h1
