--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -285,12 +285,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -300,19 +300,19 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -322,19 +322,19 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -344,19 +344,19 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -366,19 +366,19 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -388,19 +388,19 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
         <div class="swiper-slide">
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -410,13 +410,13 @@
           <img
             src="../assets/images/mainTablet2.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] hidden max-[1024px]:block max-[768px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-315 hidden max-[1024px]:block max-[768px]:hidden"
           />
         </div>
       </div>
       <div class="swiper-pagination"></div>
       <div
-        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 z-10 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
+        class="flex min-[1024px]:justify-between items-start h-full max-[1440px]:max-h-[auto] gap-10 max-[1024px]:flex-col max-[1024px]:gap-10 max-[1024px]:items-center absolute w-full top-0 inset-0 z-1 px-15 max-[1440px]:px-10 pt-34 max-[1440px]:pt-32.5 max-[768px]:px-4 max-[768px]:pt-30"
       >
         <div
           class="max-w-[793px] max-[1440px]:max-w-[431px] max-[1024px]:max-w-full"
