--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -302,7 +302,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -324,7 +324,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -346,7 +346,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -368,7 +368,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -390,7 +390,7 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] object-cover max-h-240 max-[1920px]:hidden"
           />
           <img
             src="./assets/images/mainDesktop.png"
@@ -956,7 +956,7 @@
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[1440px]:w-70 max-[1440px]:h-60 max-[1440px]:-right-17 max-[1024px]:-right-10 max-[1024px]:h-60 max-[1024px]:w-75"
+              class="service-card-image absolute bottom-0 right-0 w-full! h-full! max-[768px]:hidden"
             />
             <img
               src="./assets/images/service1mobile.png"
@@ -982,7 +982,7 @@
             <img
               src="./assets/images/service2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-120 h-100 max-[768px]:hidden max-[768px]:right-0 max-[1440px]:w-70 max-[1440px]:h-60 max-[1024px]:right-8"
+              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
             />
             <img
               src="./assets/images/service2mobile.png"
@@ -1008,7 +1008,7 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-3 w-120 h-100 max-[1440px]:hidden max-[768px]:hidden max-[768px]:right-0 max-[1440px]:h-50 max-[1024px]:right-11 max-[1024px]:bottom-2 max-[1024px]:w-60 max-[1024px]:h-50"
+              class="service-card-image absolute bottom-0 right-3 w-full! h-full!"
             />
             <img
               src="./assets/images/service3Tablet.png"
@@ -1039,7 +1039,7 @@
             <img
               src="./assets/images/service4.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-185 h-120 object-cover max-[768px]:hidden max-[768px]:h-40 max-[768px]:right-0 max-[1440px]:w-110 max-[1440px]:h-70 max-[1024px]:-right-4 max-[1024px]:h-50 max-[1024px]:bottom-2"
+              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
             />
             <img
               src="./assets/images/service4mobile.png"
@@ -1065,7 +1065,7 @@
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-195 h-130 object-cover max-[1440px]:hidden max-[1440px]:h-90 max-[1024px]:hidden"
+              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
             />
             <img
               src="./assets/images/service5Tablet.png"
