--- a/index.html
+++ b/index.html
@@ -982,7 +982,7 @@
             <img
               src="./assets/images/service2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
+              class="service-card-image absolute bottom-0 right-0 max-[768px]:hidden w-full! h-full!"
             />
             <img
               src="./assets/images/service2mobile.png"
@@ -1008,7 +1008,7 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-3 w-full! h-full!"
+              class="service-card-image absolute bottom-0 right-0 max-[1440px]:hidden w-full! h-full!"
             />
             <img
               src="./assets/images/service3Tablet.png"
@@ -1039,7 +1039,7 @@
             <img
               src="./assets/images/service4.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
+              class="service-card-image absolute bottom-0 right-0 max-[768px]:hidden w-full! h-full!"
             />
             <img
               src="./assets/images/service4mobile.png"
@@ -1065,7 +1065,7 @@
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-full! h-full!"
+              class="service-card-image absolute bottom-0 right-0 w-full! h-full! max-[1440px]:hidden max-[1440px]:h-90 max-[1024px]:hidden"
             />
             <img
               src="./assets/images/service5Tablet.png"
