--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -956,7 +956,12 @@
             <img
               src="./assets/images/service1.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-full! h-full! max-[768px]:hidden"
+              class="absolute right-0 bottom-6 w-[580px] h-[368px] max-[2560px]:w-[500px] max-[2560px]:h-[330px] max-[1920px]:w-[400px] max-[1920px]:h-[260px] max-[1440px]:hidden"
+            />
+            <img
+              src="./assets/images/service1Tablet.png"
+              alt="service1"
+              class="absolute right-0 bottom-0 hidden max-[1024px]:-right-2 max-[768px]:hidden max-[1440px]:block"
             />
             <img
               src="./assets/images/service1mobile.png"
@@ -982,7 +987,12 @@
             <img
               src="./assets/images/service2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 max-[768px]:hidden w-full! h-full!"
+              class="w-[640px] h-[415px] absolute bottom-0 right-0 max-[2560px]:hidden"
+            />
+            <img
+              src="./assets/images/service2Desktop.png"
+              alt="service1"
+              class="w-[511px] h-[420px] absolute bottom-0 right-0 max-[2560px]:block hidden max-[1920px]:w-[430px] max-[1920px]:h-[350px] max-[1440px]:w-[270px] max-[1440px]:h-[236px]"
             />
             <img
               src="./assets/images/service2mobile.png"
@@ -1008,12 +1018,12 @@
             <img
               src="./assets/images/service3.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 max-[1440px]:hidden w-full! h-full!"
+              class="w-[575px] h-[398px] absolute bottom-0 right-0 max-[1440px]:hidden max-[2560px]:w-[500px] max-[2560px]:h-[350px] max-[2560px]:-bottom-6 max-[2560px]:-right-3 max-[1920px]:w-[420px] max-[1920px]:h-[290px]"
             />
             <img
               src="./assets/images/service3Tablet.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 hidden max-[768px]:hidden max-[1440px]:block right-3 max-[1024px]:right-8 max-[1024px]:w-61 max-[1024px]:h-55"
+              class="service-card-image absolute bottom-0 hidden max-[768px]:hidden max-[1440px]:block right-3 max-[1024px]:right-4 max-[1024px]:-bottom-2 max-[1024px]:w-61 max-[1024px]:h-55"
             />
             <img
               src="./assets/images/service3mobile.png"
@@ -1037,9 +1047,19 @@
               class="w-8 h-8 service-card-arrow max-[768px]:w-6 max-[768px]:h-6"
             />
             <img
+              src="./assets/images/service4Desktop.png"
+              alt="service1"
+              class="w-[802px] h-[310px] hidden max-[2560px]:block max-[768px]:hidden absolute bottom-0 right-0 max-[1920px]:w-[630px] max-[1920px]:h-[250px] max-[1440px]:w-[443px] max-[1440px]:h-[175px] max-[1440px]:-right-5 max-[1024px]:hidden"
+            />
+            <img
               src="./assets/images/service4.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 max-[768px]:hidden w-full! h-full!"
+              class="w-[900px] h-[310px] absolute bottom-0 right-0 max-[2560px]:hidden"
+            />
+            <img
+              src="./assets/images/service4Tablet.png"
+              alt="service1"
+              class="w-[363px] h-[175px] max-[768px]:hidden absolute bottom-0 right-0 max-[1024px]:block hidden"
             />
             <img
               src="./assets/images/service4mobile.png"
@@ -1065,7 +1085,12 @@
             <img
               src="./assets/images/service5.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 right-0 w-full! h-full! max-[1440px]:hidden max-[1440px]:h-90 max-[1024px]:hidden"
+              class="absolute bottom-0 right-0 w-[1100px] h-[476px] max-[2560px]:hidden"
+            />
+            <img
+              src="./assets/images/service5Desktop.png"
+              alt="service1"
+              class="absolute bottom-0 right-0 w-[1020px] h-[476px] max-[2560px]:block hidden max-[1920px]:w-[1020px] max-[1440px]:hidden max-[1920px]:h-[376px]"
             />
             <img
               src="./assets/images/service5Tablet.png"
@@ -1075,7 +1100,7 @@
             <img
               src="./assets/images/service5Tablet2.png"
               alt="service1"
-              class="service-card-image absolute bottom-0 max-[768px]:hidden object-cover hidden max-[1024px]:block max-[768px]:w-75 max-[768px]:h-52 max-[768px]:-right-7!"
+              class="service-card-image absolute bottom-0 max-[768px]:hidden object-cover hidden max-[1024px]:block right-[105px]"
             />
             <img
               src="./assets/images/service5mobile.png"
