--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
@@ -285,7 +285,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -307,7 +307,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -329,7 +329,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -351,7 +351,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -373,7 +373,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
@@ -395,7 +395,7 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-h-240 max-[1920px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-h-240 object-cover max-[1920px]:hidden"
           />
           <img
             src="../assets/images/mainDesktop.png"
